style.css
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
   user-select: none;
 }

 body {
   background-color: #0F0F0F;
   color: white;
 }

 .nav {
   height: 70px;
   background-color: #0F0F0F;
   display: flex;
   justify-content: space-between;
   width: 100%;
   padding: 0 20px 0 20px;
   position: fixed;
   top: 0;
   z-index: 10;
 }

 .nav i {
   font-size: 15px;
   color: #fff;
   background-color: #0F0F0F;
   cursor: pointer;
 }

 .menu i {
   background-color: #0F0F0F;
   color: #fff;
   font-size: 30px;
   gap: 1rem;
   height: 20px;
   width: 26px;
   border-radius: 50%;
 }

 .left {
   display: flex;
   align-items: center;
   gap: 15px;
 }

 .logo img {
   padding-left: 25px;
   padding-top: 2px;
   height: 40px;
   background-image: none;
   background-color: #0F0F0F;
 }

 .middle {
   display: flex;
   align-items: center;
   background-color: transparent;
 }

 .middle input {
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
   width: 400px;
   height: 30px;
   background-color: #121212;
   border: 1px solid #303030;
   color: white;
   padding: 0 12px;
   border-radius: 20px 0 0 20px;
 }

 .middle i {
   background-color: #222222;
 }

 .middle i {
   background-color: #222222;
 }

 .search {
   height: 30px;
   width: 60px;
   background-color: #222;
   border: 1px solid #303030;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 0 20px 20px 0;
   cursor: pointer;
 }

 .mic {
   margin-left: 10px;
   height: 36px;
   width: 36px;
   background-color: #181818;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
 }

 .mic i {
   background-color: #181818;
 }

 .mic i:hover {
   height: 36px;
   width: 36px;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #303030;
 }

 .right {
   display: flex;
   align-items: center;
   gap: 18px;
 }

 .right i {
   font-size: 14px;
   cursor: pointer;
 }

 .account i {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
   font-size: 14px;
   height: 38px;
   width: 110px;
   background-color: #272727;
   border: none;
   border-radius: 20px;
   padding-top: 4px;
   padding-left: 5px;
 }

 .account span {
   font-size: 15px;
   font-weight: 400;
 }

 .bell i {
   cursor: pointer;
 }

 .bell i:hover {
   height: 30px;
   width: 30px;
   border-radius: 50%;
   background-color: #565656;
   color: #ffffff;
 }

 .avatar {
   width: 32px;
   height: 32px;
   background-color: #1e88e5;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
 }

 .container {
   height: 100vh;
   width: 100%;
   overflow: hidden;
   margin-top: 68px;
 }

 .sidebar {
   width: 17%;
   height: 100vh;
   position: fixed;
   left: 0;
   background-color: #0f0f0f;
   padding: 10px 0;
   overflow-y: auto;
   padding-bottom: 1rem;
 }

 .sidebar span {
   color: #fff;
   padding-left: 10px;
 }

 .nav-item {
   display: flex;
   align-items: center;
   gap: 18px;
   padding: 12px 14px;
   border-radius: 12px;
   cursor: pointer;
   font-size: 15px;
   background-color: transparent;
 }

 .nav-item i {
   font-size: 20px;
   color: #fff;
   width: 22px;
 }

 .nav-item:hover {
   background-color: #272727;
 }

 .nav-item img {
   height: 22px;
   width: 28px;
   background-image: none;
   background-color: #0F0F0F;
 }

 .explore {
   margin-left: 15px;
   margin-top: 15px;
   margin-bottom: 15px;
 }

 .more-youtube {
   margin-left: 15px;
   margin-top: 15px;
   margin-bottom: 15px;
 }

 .sidebar hr {
   border: 1px solid #373737;
 }

 .content {
   width: 83%;
   margin-left: 262px;
   background-color: #0F0F0F;
   height: 100vh;
   overflow: auto;
   flex-direction: column;
   padding: 2px 1rem 2rem 1rem;

 }

 .content .Buttons {
   height: 50px;
   width: 100%;
   margin-bottom: 20px;
   position: fixed;
   background-color: transparent;
   background-color: #0F0F0F;
 }

 .content .buttons-1 {
   display: flex;
   gap: 20px;
   width: 40px;
   background-color: #ffffff;
   border: none;
   color: #000000;
   border-radius: 10px;
   margin-right: 5px;
   align-items: end;
   justify-content: center;
   padding: 8px 16px;
   font-size: 14px;
   font-weight: 500;
   cursor: pointer;
   float: left;
   flex-direction: row;
 }

 .content .buttons {
   background-color: #272727;
   border: none;
   color: #ffffff;
   margin-left: 10px;
   margin-bottom: 10px;
   border-radius: 10px;
   padding: 8px 12px;
   font-size: 14px;
   font-weight: 500;
   cursor: pointer;
 }

 .buttons span {
   background-color: #0F0F0F;
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 500;
   color: rgb(15, 15, 15);
   font-size: 14px;
   line-height: 20px;
 }

 .cards {
   display: flex;
   background-color: #0F0F0F;
   gap: 1rem;
   object-fit: cover;
   flex-wrap: wrap;
   margin-top: 70px;
   margin-bottom: 10px;
   column-gap: 15px;
   row-gap: 40px;
 }

 .card .thumb {
   height: 225px;
   width: 400px;
   border-radius: 12px;
 }

 .profile-pic {
   width: 40px;
   height: 40px;
   border-radius: 50%
 }

 .description {
   display: flex;
   gap: 15px;
 }

 .title {
   width: 300px;
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
   line-height: 20px;
 }

 .channel-name {
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 400;
   color: #A5A5A5;
   font-size: 14px;
   line-height: 20px;
 }

 .reviews {
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 400;
   color: #A5A5A5;
   font-size: 14px;
   line-height: 20px;
 }

 ::-webkit-scrollbar {
   width: 5px;
 }

 ::-webkit-scrollbar-track {
   background: #0F0F0F;
 }

 ::-webkit-scrollbar-thumb {
   background: #888;
 }

 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }

